--- a/index.html
+++ b/index.html
@@ -12,7 +12,10 @@
     <link href="https://fonts.googleapis.com/css2?family=Kaushan+Script&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=Caveat&family=Press+Start+2P&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Secular+One&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Raleway&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/styles.css">
+    
 </head>
 <body>
     <main>
@@ -94,30 +97,30 @@
                     
                 </div>
                 <div class="habilidades">
-                    <div class="bar flex">
-                        <div class="bar fill">
-                            <div class="tag flex">HTML</div>
+                        <div class="bar">
+                            <div class="barra fill">
+                                <div class="tag">HTML</div>
+                            </div>
+                            <span class="nivelskill">100%</span>
                         </div>
-                        <span>100%</span>
-                    </div>
-                    <div class="bar flex">
-                        <div class="bar fill">
-                            <div class="tag">CSS</div>
+                        <div class="bar">
+                            <div class="barra fill">
+                                <div class="tag">CSS</div>
+                            </div>
+                            <span class="nivelskill">100%</span>
                         </div>
-                        <span>100%</span>
-                    </div>
-                    <div class="bar flex">
-                        <div class="bar fill">
-                            <div class="tag">JAVASCRIPT</div>
+                        <div class="bar">
+                            <div class="barra fill">
+                                <div class="tag">JAVASCRIPT</div>
+                            </div>
+                            <span class="nivelskill">100%</span>
                         </div>
-                        <span>100%</span>
-                    </div>
-                    <div class="bar flex">
-                        <div class="bar fill">
-                            <div class="tag">REACT</div>
+                        <div class="bar">
+                            <div class="barra fill">
+                                <div class="tag">REACT</div>
+                            </div>
+                            <span class="nivelskill">100%</span>
                         </div>
-                        <span>100%</span>
-                    </div>
                 </div>
             </div>
         </div>
