--- a/index.html
+++ b/index.html
@@ -47,8 +47,8 @@
     <section class="Acerca-de-mi">
         <div class="container">
             <div>
-                <div class="acerca">
-                    <p>Acerca de mi</p>
+                <div class="titulo-section">
+                    <p class="titulo-section">Acerca de mi</p>
                 </div>
             </div>
             <div class="iconos-sobre-mi">
@@ -60,14 +60,14 @@
                             </div>
                         </div>
                             <p class="titulo-card">Rapido</p>
-                            <p>Tiempos de carga rápidos e interacción sin demoras, mi máxima prioridad.</p>
+                            <p class="text-card">Tiempos de carga rápidos e interacción sin demoras, mi máxima prioridad.</p>
                     </div>
                     <div class="card-acerca">
                         <div class="circulo">
                             <i class="acercaicon fa-solid fa-mobile-screen"></i>
                         </div>
                             <p class="titulo-card">Responsive</p>
-                            <p>Mis diseños funcionarán en cualquier dispositivo, grande o pequeño.</p>
+                            <p class="text-card">Mis diseños funcionarán en cualquier dispositivo, grande o pequeño.</p>
                     </div>
                 </div>
                 <div class="flex circulo-2">
@@ -76,14 +76,14 @@
                             <i class="acercaicon fa-solid fa-eye"></i>
                         </div>
                             <p class="titulo-card">Intituivo</p>
-                            <p>Fuerte preferencia por una UX/UI intuitiva y fácil de usar.</p>
+                            <p class="text-card">Fuerte preferencia por una UX/UI intuitiva y fácil de usar.</p>
                         </div>
                     <div class="card-acerca">
                         <div class="circulo">
                             <i class="acercaicon fa-solid fa-palette"></i>
                         </div>
                         <p class="titulo-card">Diseños</p>
-                        <p>Sitios web no tienen que ser estáticos, me encanta hacer que las páginas cobren vida</p>
+                        <p class="text-card">Sitios web no tienen que ser estáticos, me encanta hacer que las páginas cobren vida</p>
                     </div>
                 </div>
             </div>
@@ -93,37 +93,82 @@
                         <img src="" alt="">
                     </div>
                     <p class="titulo-card">Quien soy?</p>
-                    <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Saepe minima dolorem quos enim, dolores explicabo quidem maiores esse eveniet recusandae, omnis ipsum aliquam nostrum quibusdam voluptates distinctio perferendis est sit?</p>
+                    <p class="text-card">Soy Gonzalo,cursando desarrollador Front End React en Coderhouse,con ganas de aprender todo sobre el mundo IT</p>
                     
                 </div>
                 <div class="habilidades">
-                        <div class="bar">
+                        <div class="bar html">
                             <div class="barra fill">
-                                <div class="tag">HTML</div>
+                                <div class="tag"><i class="logotecno fa-brands fa-html5"></i>HTML</div>
                             </div>
-                            <span class="nivelskill">100%</span>
+                            <span class="nivelskill">90%</span>
                         </div>
-                        <div class="bar">
+                        <div class="bar css">
                             <div class="barra fill">
-                                <div class="tag">CSS</div>
+                                <div class="tag"><i class="logotecno fa-brands fa-css3-alt"></i>CSS</div>
                             </div>
-                            <span class="nivelskill">100%</span>
+                            <span class="nivelskill">80%</span>
                         </div>
-                        <div class="bar">
+                        <div class="bar js">
                             <div class="barra fill">
-                                <div class="tag">JAVASCRIPT</div>
+                                <div class="tag"><i class="logotecno fa-brands fa-js-square"></i>JS</div>
                             </div>
-                            <span class="nivelskill">100%</span>
+                            <span class="nivelskill">60%</span>
                         </div>
-                        <div class="bar">
+                        <div class="bar react">
                             <div class="barra fill">
-                                <div class="tag">REACT</div>
+                                <div class="tag"><i class="logotecno fa-brands fa-react"></i>REACT</div>
                             </div>
-                            <span class="nivelskill">100%</span>
+                            <span class="nivelskill">50%</span>
                         </div>
                 </div>
             </div>
         </div>
+            <!-- Tecnologia que uso-->
+            <div class="titulo-section">
+                <p class="titulo-section">Tecnologias</p>
+            </div>
+            <div>
+            <!-- Proyectos -->
+            </div>
+            <div class="titulo-section">
+                <p class="titulo-section">Proyectos</p>
+            </div>
+            <div id="galeria">
+                <div>
+                    <div class="card"></div>
+                </div>
+            </div>
+            <!-- Contacto -->
+            <div class="contacto">
+                <img id="onda" src="./images/wave.svg" alt="">
+                <div class="titulo-contacto">
+                    <div class="login-box">
+                        <h2>Contactame</h2>
+                        <form>
+                        <div class="user-box">
+                            <input type="text" name="" required="">
+                            <label>Nombre</label>
+                        </div>
+                        <div class="user-box">
+                            <input type="email" name="" required="">
+                            <label>Email</label>
+                        </div>
+                        <div>
+                            <textarea name="textarea" placeholder="Escribe"></textarea>
+                        </div>
+                        <a href="#">
+                            <span></span>
+                            <span></span>
+                            <span></span>
+                            <span></span>
+                            Enviar
+                        </a>
+                        </form>
+                    </div>
+                </div>
+            </div>
     </section>
+        
 </body>
 </html>
