--- a/index.html
+++ b/index.html
@@ -99,25 +99,25 @@
                 <div class="habilidades">
                         <div class="bar html">
                             <div class="barra fill">
-                                <div class="tag"><i class="logotecno fa-brands fa-html5"></i>HTML</div>
+                                <div class="tag"><i class="logoskills fa-brands fa-html5"></i>HTML</div>
                             </div>
                             <span class="nivelskill">90%</span>
                         </div>
                         <div class="bar css">
                             <div class="barra fill">
-                                <div class="tag"><i class="logotecno fa-brands fa-css3-alt"></i>CSS</div>
+                                <div class="tag"><i class="logoskills fa-brands fa-css3-alt"></i>CSS</div>
                             </div>
                             <span class="nivelskill">80%</span>
                         </div>
                         <div class="bar js">
                             <div class="barra fill">
-                                <div class="tag"><i class="logotecno fa-brands fa-js-square"></i>JS</div>
+                                <div class="tag"><i class="logoskills fa-brands fa-js-square"></i>JS</div>
                             </div>
                             <span class="nivelskill">60%</span>
                         </div>
                         <div class="bar react">
                             <div class="barra fill">
-                                <div class="tag"><i class="logotecno fa-brands fa-react"></i>REACT</div>
+                                <div class="tag"><i class="logoskills fa-brands fa-react"></i>REACT</div>
                             </div>
                             <span class="nivelskill">50%</span>
                         </div>
@@ -125,12 +125,58 @@
             </div>
         </div>
             <!-- Tecnologia que uso-->
-            <div class="titulo-section">
-                <p class="titulo-section">Tecnologias</p>
+            <div class="tecnologias">
+                <div class="titulo-section">
+                    <p class="titulo-section">Tecnologias</p>
+                </div>
+                <div class="slider">
+                    <div class="slide-track">
+                        <div class="slide">
+                            <img class="logotecno" src="./images/html-5.png" alt="">
+                        </div>
+                        <div class="slide">
+                            <img class="logotecno" src="./images/css-3.png" alt="">
+                        </div>
+                        <div class="slide">
+                            <img class="logotecno" src="./images/sass.png" alt="">
+                        </div>
+                        <div class="slide">
+                            <img class="logotecno" src="./images/bootstrap.png" alt="">
+                        </div>
+                        <div class="slide">
+                            <img class="logotecno" src="./images/js.png" alt="">
+                        </div>
+                        <div class="slide">
+                            <img class="logotecno" src="./images/physics.png" alt="">
+                        </div>
+                        <div class="slide">
+                            <img class="logotecno" src="./images/github.png" alt="">
+                        </div>
+                        <div class="slide">
+                            <img class="logotecno" src="./images/html-5.png" alt="">
+                        </div>
+                        <div class="slide">
+                            <img class="logotecno" src="./images/css-3.png" alt="">
+                        </div>
+                        <div class="slide">
+                            <img class="logotecno" src="./images/sass.png" alt="">
+                        </div>
+                        <div class="slide">
+                            <img class="logotecno" src="./images/bootstrap.png" alt="">
+                        </div>
+                        <div class="slide">
+                            <img class="logotecno" src="./images/js.png" alt="">
+                        </div>
+                        <div class="slide">
+                            <img class="logotecno" src="./images/physics.png" alt="">
+                        </div>
+                        <div class="slide">
+                            <img class="logotecno" src="./images/github.png" alt="">
+                        </div>
+                    </div>
+                </div>
             </div>
-            <div>
             <!-- Proyectos -->
-            </div>
             <div class="titulo-section">
                 <p class="titulo-section">Proyectos</p>
             </div>
