--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             <div class="text-inicio"><span class="resaltar">Gonzalo Romero</span>
             <br>Front web developer
             </div>
-            <div class="button page-link" dest="Sobre mí">
+            <div class="button page-link" dest="about">
                 Acerca de mí
                 <i class="fa-solid fa-arrow-down"></i>
             </div>
@@ -44,7 +44,7 @@
             </ul>
         <!-- <i > </i>/*Hamburguesa/ -->
     </nav>
-    <section class="Acerca-de-mi">
+    <section class="Acerca-de-mi" id="about">
         <div class="container">
             <div>
                 <div class="titulo-section">
@@ -213,6 +213,12 @@
                         </form>
                     </div>
                 </div>
+            </div>
+            <div class="container2">
+                <i class="fa-brands fa-linkedin" id="apple"></i>
+                <i class="fa-brands fa-whatsapp-square" id="twitter"></i>
+                <i class="fa fa-github-square github" id="github"></i>
+                <i class="fa-brands fa-instagram-square" id="facebook"></i>
             </div>
     </section>
         
